// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-row-hover-color: #212225 !important;
  --p-internal-table-border-color: #404044 !important;
  --p-internal-table-theme: dark !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  position: relative;
  width: 100%;
  display: table;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  text-align: left;
  color: #FBFCFF;
  white-space: nowrap;
  border-collapse: collapse;
}"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-row-hover-color: #EEEFF2 !important;
  --p-internal-table-border-color: #D8D8DB !important;
  --p-internal-table-theme: light !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  position: relative;
  width: 100%;
  display: table;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  text-align: left;
  color: #010205;
  white-space: nowrap;
  border-collapse: collapse;
}"
`;
